fix text alignment

--- a/firebase-upload/src/pages/clothing-upload.css
+++ b/firebase-upload/src/pages/clothing-upload.css
@@ -18,7 +18,7 @@
     position: absolute;
     z-index: -1;
     top: 130px;
-    left: 13px;
+    left: -30px;
     font-size: 17px;
     color: black;
   }
@@ -37,6 +37,7 @@
     border: 1.5px solid black;
     position: absolute;
     top: 120px;
+    left: -43px;
   }
 
   .button:hover {
@@ -113,7 +114,7 @@
     position: absolute;
     /* left: 53vh; */
     left: 25%;
-    top: 60vh;
+    top: 50vh;
     font-size: 20px;
     text-decoration: underline;
   }
